@@ -1,2 +1,3 @@
 CSS_NAME = Default
 CSS_FILE = simple.css
+JSKOMMENT_CAPTCHA_THEME = white
